--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,11 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "cors": "^2.8.5"
+    "express": "^4.17.1"
   }
 }
